# fanta

./: .gitignore  :w  CMakeLists.txt  GEMINI.md  cpu.org
.agents/: AGENTS.md
common/: cpu_info.hpp  fanta_utils.hpp  instructions.hpp  instructions_impl.hpp
common/testframework/: assertions.hpp  testing.hpp
compiler/: PassDefinition.hpp  SimpleIRPass.cpp  SimpleIRPass.hpp  allocator.cpp  allocator.hpp  ast.hpp  codegen.cpp  compiler_main.cpp  instruction_emit.cpp  instruction_emit.hpp  ir.cpp  ir.hpp  lexer.hpp  parser.cpp  parser.hpp
docs/: commenting_standards.md  comparisons.md  developer_guide.md
lang/: def.md
src/: SimpleIRPass.cpp  SimpleIRPass.hpp  allocator.cpp  allocator.hpp  assembler.hpp  ast.hpp  codegen.cpp  codegen.hpp  cpu.cpp  cpu.hpp  cpu_info.hpp  instruction_emit.cpp  instruction_emit.hpp  instructions.hpp  instructions_impl.hpp  ir.cpp  ir.hpp  lexer.hpp  main.cpp  parser.hpp  string_assembler.hpp
test/: codegen.cpp  cpu.cpp  lexer.cpp  ops.cpp  parser.cpp  simpleirpass.cpp  string_assembler.cpp
tui/: diff.cpp  disasm.hpp  main.cpp  tests.cpp  trace.cpp  trie.hpp  tui.cpp  tui.hpp
vm/: assembler.hpp  cpu.cpp  cpu.hpp  line.hpp  main.cpp  string_assembler.hpp
